# stereo-vision-depth-map

./: .gitignore  CMakeLists.txt  README.md  disparity_ssd_ws7_md128.pgm  funny_edges.cpp  main.cpp
res/: disparity_sad_ws11_md128.pgm  disparity_sad_ws11_md192.pgm  disparity_sad_ws11_md256.pgm  disparity_sad_ws11_md64.pgm  disparity_sad_ws13_md128.pgm  disparity_sad_ws13_md192.pgm  disparity_sad_ws13_md256.pgm  disparity_sad_ws13_md64.pgm  disparity_sad_ws15_md128.pgm  disparity_sad_ws15_md192.pgm  disparity_sad_ws15_md256.pgm  disparity_sad_ws15_md64.pgm  disparity_sad_ws17_md128.pgm  disparity_sad_ws17_md192.pgm  disparity_sad_ws17_md256.pgm  disparity_sad_ws17_md64.pgm  disparity_sad_ws19_md128.pgm  disparity_sad_ws19_md192.pgm  disparity_sad_ws19_md256.pgm  disparity_sad_ws19_md64.pgm  disparity_sad_ws21_md128.pgm  disparity_sad_ws21_md192.pgm  disparity_sad_ws21_md256.pgm  disparity_sad_ws21_md64.pgm  disparity_sad_ws3_md16.pgm  disparity_sad_ws3_md32.pgm  disparity_sad_ws3_md4.pgm  disparity_sad_ws3_md8.pgm  disparity_sad_ws5_md16.pgm  disparity_sad_ws5_md32.pgm  disparity_sad_ws5_md4.pgm  disparity_sad_ws5_md8.pgm  disparity_sad_ws7_md128.pgm  disparity_sad_ws7_md192.pgm  disparity_sad_ws7_md256.pgm  disparity_sad_ws7_md32.pgm  disparity_sad_ws7_md64_left_1.png.pgm  disparity_sad_ws7_md64_left_2.png.pgm  disparity_sad_ws9_md128.pgm  disparity_sad_ws9_md192.pgm  (+43 more)
src/: smth.cpp  smth.h
